--- a/quickjs_esp32_firmware/index.html
+++ b/quickjs_esp32_firmware/index.html
@@ -36,7 +36,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
 
-  <script type="module" src="https://unpkg.com/esp-web-tools@10.0.1/dist/web/install-button.js?module"></script>
+  <script type="module" src="https://unpkg.com/esp-web-tools@10.1.1/dist/web/install-button.js?module"></script>
 
   <title>QuickJs_ESP32_Firmware</title>
 </head>
@@ -59,6 +59,7 @@
           <li><esp-web-install-button manifest="firmwares/m5stick-c/manifest.json"></esp-web-install-button> m5stick-c</li>
           <li><esp-web-install-button manifest="firmwares/m5stamp-c3/manifest.json"></esp-web-install-button> m5stamp-c3</li>
           <li><esp-web-install-button manifest="firmwares/m5stamp-c3u/manifest.json"></esp-web-install-button> m5stamp-c3u</li>
+          <li><esp-web-install-button manifest="firmwares/m5stack-atoms3/manifest.json"></esp-web-install-button> m5atom-s3</li>
         </ul>
 
 
